# spokify

./: README.md  pyproject.toml
src/spotcli/: __main__.py  app.py
src/spotcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spotcli/pages/: home.py  search.py
src/spotcli/services/: spotify.py
src/spotcli/widgets/: content.py  player.py  sidebar.py
