[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotcli"
version = "0.1.0"
description = "Spotify CLI"
requires-python = ">=3.11"

dependencies = [
    "typer",
    "rich",
    "spotipy",
]

[project.scripts]
spotcli = "spot_cli.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]